[tool.poetry]
name = "apasswordmanager"
version = "0.1.0"
description = ""
authors = ["jo-project <jo.project.0911@gmail.com>"]
readme = "README.md"
packages = [
  {"include" = "apasswordmanager", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.10"
pycryptodome = "^3.17"
pyperclip = "^1.8.2"
tabulate = "^0.9.0"
passwordgenerator = "^1.5.1"
sqlalchemy = "^2.0.12"
sqlcipher3 = "^0.5.0"
click = "^8.1.3"

[tool.poetry.scripts]
app = "apasswordmanager.vault:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
