[tool.poetry]
name = "kault"
version = "0.1.0"
description = ""
authors = ["jo-project <jo.project.0911@gmail.com>"]
readme = "README.md"
packages = [
  {"include" = "kault", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.10"
pycryptodome = "^3.17"
pyperclip = "^1.8.2"
tabulate = "^0.9.0"
passwordgenerator = "^1.5.1"
sqlalchemy = "^2.0.12"
click = "^8.1.3"
sqlcipher3-binary = "^0.5.0"
rich = "^13.3.5"
pyyaml = "^6.0"

[tool.poetry.scripts]
app = "kault.kault:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
